add router update notification
