# public/swagger.json
@@ -1805,6 +1805,16 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "name": "course",
+                        "in": "query",
+                        "required": false,
+                        "style": "form",
+                        "explode": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
